# sp1-helios

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  book.toml  justfile
.github/workflows/: book.yml  elf.yml  foundry.yaml  pr.yaml  pr_lint.yaml  run_program.yaml
book/: SUMMARY.md  components.md  deployment.md  faq.md  introduction.md  receipts.md  reproducible-builds.md  trust-model.md
common/: Cargo.toml
contracts/: .env.example  .gitignore  README.md  foundry.toml  genesis.json  remappings.txt
contracts/script/: Deploy.s.sol
contracts/src/: LightClient.sol  R0VMHelios.sol  SP1Helios.sol  SP1LightClient.sol
contracts/test/: SP1Helios.t.sol
elf/: execution_header  light_client  riscv32im-succinct-zkvm-elf  sp1-helios-docker  sp1-helios-elf  storage
example/: Cargo.toml
example/src/: main.rs
examples/: input.cbor
helios-consensus/: Cargo.toml
helios-consensus/consensus/src/: consensus.rs  lib.rs
host/: Cargo.toml
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
primitives/: Cargo.toml
primitives/src/: base.rs  consensus.rs  errors.rs  fetcher.rs  lib.rs  receipt.rs  types.rs  utils.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf
program/src/: execution_header.rs  light_client.rs  main.rs  storage.rs
script/: .env.example  Cargo.toml  bla.txt  build.rs  rust-toolchain
script/src/: handle.rs  lib.rs  main.rs  operator.rs  receipt.rs  relay.rs  trie.rs  types.rs
script/tests/: execute.rs
script/tests/fixtures/: proof_inputs.cbor
