[workspace]
members = ["primitives", "script", "program"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
authors = ["xavierdmello", "ratankaliani"]
homepage = "https://succinctlabs.github.io/op-succinct/"
repository = "https://github.com/succinctlabs/op-succinct"

[workspace.dependencies]
# sp1-helios
sp1-helios-script = { path = "script" }
sp1-helios-program = { path = "program" }
sp1-helios-primitives = { path = "primitives" }

# helios
helios = { git = "https://github.com/a16z/helios", version = "0.7.0" }
helios-consensus-core = { git = "https://github.com/a16z/helios", version = "0.7.0" }
helios-ethereum = { git = "https://github.com/a16z/helios", version = "0.7.0" }

# general
dotenv = "0.15.0"
eyre = "0.6.12"
sp1-sdk = "3.0.0"
sp1-build = "3.0.0"
tokio = "1.38.0"
tracing = "0.1.37"
serde = "1.0.203"
ssz-rs = { package = "ssz_rs", version = "0.9.0" }
thiserror = "1.0.61"
zduny-wasm-timer = "0.2.8"
serde_cbor = "0.11.2"
hex = "0.4.3"
serde_json = "1.0.125"
alloy-sol-types = "0.7.7"
clap = "4.5.9"
log = "0.4.22"
env_logger = "0.11.3"
alloy-primitives = "0.7.7"
alloy = { version = "0.1.1", features = ["full"] }
anyhow = "1.0.86"
reqwest = "0.12.5"
tree_hash = "0.7.0"
serde_with = { version = "3.4.0", features = ["hex"] }
cargo_metadata = "0.18"

# receipt
alloy-trie = "0.4"
nybbles = "0.2.1"

[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.9.9" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
# From upstream: https://github.com/a16z/helios/blob/master/Cargo.toml#L116C29-L116C72
ethereum_hashing = { git = "https://github.com/ncitron/ethereum_hashing", rev = "7ee70944ed4fabe301551da8c447e4f4ae5e6c35" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", branch = "patch-v0.8.0" }
