[workspace]
members = ["host", "methods", "primitives"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
authors = ["xavierdmello", "ratankaliani"]
homepage = "https://succinctlabs.github.io/sp1-helios/"
repository = "https://github.com/succinctlabs/sp1-helios"

[workspace.dependencies]
# sp1-helios
sp1-helios-script = { path = "host" }
sp1-helios-methods = { path = "methods" }
sp1-helios-primitives = { path = "primitives" }

# risc0 dependencies.
risc0-build = { version = "2.0.1-rc.3" }
risc0-zkvm = { version = "2.0.0-rc.3", features = ["unstable"] }

# helios
helios = { git = "https://github.com/a16z/helios", tag = "0.8.3" }
helios-consensus-core = { git = "https://github.com/a16z/helios", tag = "0.8.3" }
helios-ethereum = { git = "https://github.com/a16z/helios", tag = "0.8.3" }

# general
dotenv = "0.15.0"
eyre = "0.6.12"
tokio = "1.38.0"
tracing = "0.1.37"
serde = "1.0.203"
thiserror = "1.0.61"
zduny-wasm-timer = "0.2.8"
serde_cbor = "0.11.2"
hex = "0.4.3"
serde_json = "1.0.125"
alloy-sol-types = "0.8.15"
clap = { version = "4.5.9", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.3"
alloy-primitives = "0.8.15"
alloy-trie = "0.7.9"
alloy-rlp = { version = "0.3.9", default-features = false, features = [
    "derive",
    "arrayvec",
] }
alloy = { version = "0.9.1", features = ["full"] }
anyhow = "1.0.86"
reqwest = "0.12.5"
tree_hash = "0.9.0"
serde_with = { version = "3.4.0", features = ["hex"] }
cargo_metadata = "0.18"
