[workspace]
members = [
    "common",
    "config",
    "consensus",
]

[workspace.package]
version = "0.5.5"
edition = "2021"

[workspace.dependencies]
# consensus
ssz-rs = { package = "ssz_rs", version = "0.9.0" }
milagro_bls = { package = "snowbridge-milagro-bls", git = "https://github.com/Snowfork/milagro_bls", rev = "6a95c9e33c6a41d9137761e593d53742ebb964de" }

# execution
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "3bf1a9e0d698e9fdfc91d0353878901af5a5c5ef" }
revm = { git = "https://github.com/bluealloy/revm", rev = "23cbac479f616eba5ab11ddfe6d5814b9c492202", default-features = false, features = [
    "std",
    "serde",
] }
triehash-ethereum = { git = "https://github.com/openethereum/parity-ethereum", rev = "55c90d4016505317034e3e98f699af07f5404b63" }

# async/futures
async-trait = "0.1.57"
futures = "0.3.23"
tokio = { version = "1", features = ["rt", "sync", "macros"] }

# io
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.85"

# misc
eyre = "0.6.8"
hex = "0.4.3"
bytes = "1.5"
toml = "0.5.9"
tracing = "0.1.37"
chrono = "0.4.23"
thiserror = "1.0.37"
superstruct = "0.7.0"
openssl = { version = "0.10", features = ["vendored"] }
hyper = "1.3.1"
zduny-wasm-timer = "0.2.8"
retri = "0.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1