[package]
version = "0.1.0"
name = "r0vm-helios-script"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "genesis"
path = "./bin/genesis.rs"

[[bin]]
name = "operator"
path = "./bin/operator.rs"

[[bin]]
name = "test"
path = "./bin/test.rs"

[dependencies]
dotenv = { workspace = true }
tokio = { workspace = true }
helios-consensus-core = { workspace = true }
helios-ethereum = { workspace = true }
r0vm-helios-primitives = { workspace = true }
r0vm-helios-methods = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
alloy-primitives = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
reqwest = { workspace = true }
tree_hash = { workspace = true }
serde_json = { workspace = true }
alloy-trie = { workspace = true }
risc0-zkvm = { workspace = true }
risc0-ethereum-contracts = "2.0.0-rc.3"
