[package]
version = "0.1.0"
name = "sp1-helios-primitives"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ssz-rs = { workspace = true }
serde = { workspace = true }
consensus-core = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
