[workspace]
[package]
version = "0.1.0"
name = "helios-2-program"
edition = "2021"

[dependencies]
sp1-zkvm = "1.2.0-rc1"
consensus-core = { path = "../../helios/consensus-core" }
common = { path = "../../helios/common" }
serde_cbor = "0.11.2"
sp1-helios-primitives = { path = "../primitives" }
alloy-sol-types = "0.7.7"
ssz-rs = { package = "ssz_rs", version = "0.9.0" }
alloy-primitives = "0.7.7"
hex = "0.4.3"
tree_hash = "0.7.0"
[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.9.9" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.10.8" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
# ethereum_hashing = { git = "https://github.com/ncitron/ethereum_hashing", rev = "7ee70944ed4fabe301551da8c447e4f4ae5e6c35" }
ethereum_hashing = { path = "../../ethereum_hashing" }
