[package]
version = "0.1.0"
name = "sp1-helios-program"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "light_client"
path = "src/light_client.rs"

[[bin]]
name = "storage"
path = "src/storage.rs"

[dependencies]
sp1-zkvm = "5.0.0"
helios-consensus-core = { workspace = true }
serde_cbor = { workspace = true }
sp1-helios-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
tree_hash = { workspace = true }
