[package]
version = "0.1.0"
name = "sp1-helios-script"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "genesis"
path = "./bin/genesis.rs"

[[bin]]
name = "operator"
path = "./bin/operator.rs"

[[bin]]
name = "test"
path = "./bin/test.rs"

[dependencies]
dotenv = { workspace = true }
sp1-sdk = { workspace = true }
tokio = { workspace = true }
helios = { workspace = true }
sp1-helios-primitives = { workspace = true }
serde = { workspace = true }
ssz-rs = { workspace = true }
serde_cbor = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
alloy-primitives = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
tree_hash = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
