[package]
version = "0.1.0"
name = "sp1-helios-script"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "genesis"
path = "./bin/genesis.rs"

[[bin]]
name = "operator"
path = "./bin/operator.rs"

[[bin]]
name = "vkey"
path = "./bin/vkey.rs"

[dependencies]
dotenv = { workspace = true }
sp1-sdk = { workspace = true }
tokio = { workspace = true }
helios-consensus-core = { workspace = true }
helios-ethereum = { workspace = true }
sp1-helios-primitives = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
clap = { workspace = true }
alloy-primitives = { workspace = true }
alloy-trie = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
reqwest = { workspace = true }
tree_hash = { workspace = true }
serde_json = { workspace = true }
futures = "0.3.31"
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
sp1-build = { workspace = true }
